; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_dell-rbtn.c_rbtn_input_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_dell-rbtn.c_rbtn_input_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rbtn_data = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i8*, i8*, i32, i32*, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@ENOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"DELL Wireless hotkeys\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"dellabce/input0\00", align 1
@BUS_HOST = common dso_local global i32 0, align 4
@EV_KEY = common dso_local global i32 0, align 4
@KEY_RFKILL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rbtn_data*)* @rbtn_input_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rbtn_input_init(%struct.rbtn_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rbtn_data*, align 8
  %4 = alloca i32, align 4
  store %struct.rbtn_data* %0, %struct.rbtn_data** %3, align 8
  %5 = call %struct.TYPE_6__* (...) @input_allocate_device()
  %6 = load %struct.rbtn_data*, %struct.rbtn_data** %3, align 8
  %7 = getelementptr inbounds %struct.rbtn_data, %struct.rbtn_data* %6, i32 0, i32 0
  store %struct.TYPE_6__* %5, %struct.TYPE_6__** %7, align 8
  %8 = load %struct.rbtn_data*, %struct.rbtn_data** %3, align 8
  %9 = getelementptr inbounds %struct.rbtn_data, %struct.rbtn_data* %8, i32 0, i32 0
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %11 = icmp ne %struct.TYPE_6__* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %1
  %13 = load i32, i32* @ENOMEM, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %2, align 4
  br label %60

15:                                               ; preds = %1
  %16 = load %struct.rbtn_data*, %struct.rbtn_data** %3, align 8
  %17 = getelementptr inbounds %struct.rbtn_data, %struct.rbtn_data* %16, i32 0, i32 0
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8** %19, align 8
  %20 = load %struct.rbtn_data*, %struct.rbtn_data** %3, align 8
  %21 = getelementptr inbounds %struct.rbtn_data, %struct.rbtn_data* %20, i32 0, i32 0
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8** %23, align 8
  %24 = load i32, i32* @BUS_HOST, align 4
  %25 = load %struct.rbtn_data*, %struct.rbtn_data** %3, align 8
  %26 = getelementptr inbounds %struct.rbtn_data, %struct.rbtn_data* %25, i32 0, i32 0
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 4
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  store i32 %24, i32* %29, align 8
  %30 = load i32, i32* @EV_KEY, align 4
  %31 = call i32 @BIT(i32 %30)
  %32 = load %struct.rbtn_data*, %struct.rbtn_data** %3, align 8
  %33 = getelementptr inbounds %struct.rbtn_data, %struct.rbtn_data* %32, i32 0, i32 0
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %34, i32 0, i32 3
  %36 = load i32*, i32** %35, align 8
  %37 = getelementptr inbounds i32, i32* %36, i64 0
  store i32 %31, i32* %37, align 4
  %38 = load i32, i32* @KEY_RFKILL, align 4
  %39 = load %struct.rbtn_data*, %struct.rbtn_data** %3, align 8
  %40 = getelementptr inbounds %struct.rbtn_data, %struct.rbtn_data* %39, i32 0, i32 0
  %41 = load %struct.TYPE_6__*, %struct.TYPE_6__** %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %41, i32 0, i32 2
  %43 = load i32, i32* %42, align 8
  %44 = call i32 @set_bit(i32 %38, i32 %43)
  %45 = load %struct.rbtn_data*, %struct.rbtn_data** %3, align 8
  %46 = getelementptr inbounds %struct.rbtn_data, %struct.rbtn_data* %45, i32 0, i32 0
  %47 = load %struct.TYPE_6__*, %struct.TYPE_6__** %46, align 8
  %48 = call i32 @input_register_device(%struct.TYPE_6__* %47)
  store i32 %48, i32* %4, align 4
  %49 = load i32, i32* %4, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %59

51:                                               ; preds = %15
  %52 = load %struct.rbtn_data*, %struct.rbtn_data** %3, align 8
  %53 = getelementptr inbounds %struct.rbtn_data, %struct.rbtn_data* %52, i32 0, i32 0
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %53, align 8
  %55 = call i32 @input_free_device(%struct.TYPE_6__* %54)
  %56 = load %struct.rbtn_data*, %struct.rbtn_data** %3, align 8
  %57 = getelementptr inbounds %struct.rbtn_data, %struct.rbtn_data* %56, i32 0, i32 0
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %57, align 8
  %58 = load i32, i32* %4, align 4
  store i32 %58, i32* %2, align 4
  br label %60

59:                                               ; preds = %15
  store i32 0, i32* %2, align 4
  br label %60

60:                                               ; preds = %59, %51, %12
  %61 = load i32, i32* %2, align 4
  ret i32 %61
}

declare dso_local %struct.TYPE_6__* @input_allocate_device(...) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @set_bit(i32, i32) #1

declare dso_local i32 @input_register_device(%struct.TYPE_6__*) #1

declare dso_local i32 @input_free_device(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
